--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# H2
+spring.h2.console.enabled=true
+#spring.h2.console.path=/api/v1/h2
+
+# Datasource for H2 database
+spring.datasource.url=jdbc:h2:file:~/weatherme
+spring.datasource.username=sa
+spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.h2.Driver
 
