commit and push

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+# Weather Me properties
+weather.me.connect-to-real-api=YES
+weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
+weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
+weather.me.openweathermapsite-api-currentweather-suffix=/weather?
+
 # H2
 spring.h2.console.enabled=true
 #spring.h2.console.path=/api/v1/h2
+
+# By using this property, H2 table columns are created same as @Column(name="***")
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Datasource for H2 database
 spring.datasource.url=jdbc:h2:file:~/weatherme
