--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
 weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
 weather.me.openweathermapsite-api-currentweather-suffix=/weather?
 
-# H2
+# H2 activation
 spring.h2.console.enabled=true
 #spring.h2.console.path=/api/v1/h2
 
