--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-# Template for RestTemplate usage
+# Weather Me properties
 weather.me.connect-to-real-api=NO
 weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
 weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
