--- a/weather-me-rest/pom.xml
+++ b/weather-me-rest/pom.xml
@@ -4,15 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.alperkurtul</groupId>
-        <artifactId>template-parent</artifactId>
+        <artifactId>weather-me-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../template-parent</relativePath>
+        <relativePath>../weather-me-parent</relativePath>
     </parent>
     <groupId>com.alperkurtul</groupId>
-    <artifactId>template-rest</artifactId>
+    <artifactId>weather-me-rest</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>template-rest</name>
-    <description>Rest Layer of Spring Boot Template project</description>
+    <name>weather-me-rest</name>
+    <description>Rest Layer of Spring Boot Weather Me project</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>com.alperkurtul</groupId>
-            <artifactId>template-service</artifactId>
+            <artifactId>weather-me-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
