--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -4,9 +4,11 @@ weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
 weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
 weather.me.openweathermapsite-api-currentweather-suffix=/weather?
 
+#INTERNATIONALIZATION
+spring.messages.basename=message/error_message
+
 # H2 activation
 spring.h2.console.enabled=true
-#spring.h2.console.path=/api/v1/h2
 
 # By using this property, H2 table columns are created same as @Column(name="***")
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
