--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -19,3 +19,5 @@ spring.datasource.username=sa
 spring.datasource.password=admin
 #spring.datasource.driver-class-name=org.h2.Driver
 
+#spring.jpa.show-sql=true
+
