commit and push

--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 # Weather Me properties
 weather.me.connect-to-real-api=YES
 weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
