--- a/weather-me-app/src/main/resources/application-prd.properties
+++ b/weather-me-app/src/main/resources/application-prd.properties
@@ -16,7 +16,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Datasource for H2 database
-spring.datasource.url=jdbc:h2:file:~/weatherme
+spring.datasource.url=jdbc:h2:file:~/weatherme-prd
 spring.datasource.username=sa
 spring.datasource.password=admin
 #spring.datasource.driver-class-name=org.h2.Driver
