commit and push

--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -1,10 +1,13 @@
 server.port=8080
 
+springfox.swagger.enabled=true
+
 # Weather Me properties
 weather.me.connect-to-real-api=YES
 weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
 weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
 weather.me.openweathermapsite-api-currentweather-suffix=/weather?
+weather.me.locations.load=false
 
 #INTERNATIONALIZATION
 spring.messages.basename=message/error_message
