--- a/weather-me-app/src/main/resources/application-prd.properties
+++ b/weather-me-app/src/main/resources/application-prd.properties
@@ -1,16 +1,19 @@
 server.port=9090
 
+springfox.swagger.enabled=false
+
 # Weather Me properties
 weather.me.connect-to-real-api=YES
 weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
 weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
 weather.me.openweathermapsite-api-currentweather-suffix=/weather?
+weather.me.locations.load=true
 
 #INTERNATIONALIZATION
 spring.messages.basename=message/error_message
 
 # H2 activation
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 
 # By using this property, H2 table columns are created same as @Column(name="***")
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -22,4 +25,3 @@ spring.datasource.password=admin
 #spring.datasource.driver-class-name=org.h2.Driver
 
 #spring.jpa.show-sql=true
-
