--- a/pom.xml
+++ b/pom.xml
@@ -2,29 +2,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
-        <relativePath/>
-    </parent>
-    <groupId>com.alperkurtul</groupId>
+
+    <groupId>com.alperkurtul.weatherme</groupId>
     <artifactId>weather-me</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>weather-me</name>
-    <description>Root Layer of Spring Boot Weather Me project</description>
+    <name>WeatherMe Project</name>
+    <description>Root Layer of WeatherMe Project</description>
     <packaging>pom</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.plugin>3.7.0</maven.compiler.plugin>
         <java.version>1.8</java.version>
     </properties>
 
     <modules>
-        <module>weather-me-parent</module>
         <module>weather-me-app</module>
+        <module>weather-me-bom</module>
+        <module>weather-me-data</module>
+        <module>weather-me-parent</module>
         <module>weather-me-rest</module>
         <module>weather-me-service</module>
-        <module>weather-me-data</module>
     </modules>
 
 </project>
