--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -22,7 +22,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.datasource.url=jdbc:h2:file:~/weatherme-local
 spring.datasource.username=sa
 spring.datasource.password=admin
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 
 #spring.jpa.show-sql=true
 
