--- a/weather-me-data/pom.xml
+++ b/weather-me-data/pom.xml
@@ -2,30 +2,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>com.alperkurtul</groupId>
+        <groupId>com.alperkurtul.weatherme</groupId>
         <artifactId>weather-me-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../weather-me-parent</relativePath>
     </parent>
-    <groupId>com.alperkurtul</groupId>
+
     <artifactId>weather-me-data</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>weather-me-data</name>
-    <description>Data Layer of Spring Boot Weather Me project</description>
+    <name>WeatherMe Data Module</name>
+    <description>Data Layer of WeatherMe Project</description>
     <packaging>jar</packaging>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
-    <!--<build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 
 </project>
