--- a/weather-me-app/src/main/resources/application-prd.properties
+++ b/weather-me-app/src/main/resources/application-prd.properties
@@ -3,7 +3,7 @@ server.port=9090
 springfox.swagger.enabled=false
 
 # Weather Me properties
-weather.me.openweathermapsite-api-appid=bcd5cca022de3d1a38619a0f353c5c77
+#weather.me.openweathermapsite-api-appid=<appid>
 weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
 weather.me.openweathermapsite-api-currentweather-suffix=/weather?
 weather.me.locations.load=true
@@ -11,7 +11,7 @@ weather.me.locations.load=true
 #INTERNATIONALIZATION
 spring.messages.basename=message/error_message
 
-# By using this property, H2 table columns are created same as @Column(name="***")
+# By using this property, Tables' columns are created same as @Column(name="***")
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Datasource for MySQL database
