commit and push

--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -3,10 +3,12 @@ server.port=8080
 springfox.swagger.enabled=true
 
 # Weather Me properties
-#weather.me.openweathermapsite-api-appid=<appid>
-weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
-weather.me.openweathermapsite-api-currentweather-suffix=/weather?
 weather.me.locations.load=false
+#weather.me.api-appid=<appid>
+weather.me.api-url=http://api.openweathermap.org/data/2.5
+weather.me.api-suffix-for-weather=/weather?
+weather.me.api-call-validity-minute-for-weather=30
+weather.me.api-call-count-limit-per-minute-for-weather=60
 
 #INTERNATIONALIZATION
 spring.messages.basename=message/error_message
