--- a/weather-me-app/src/main/resources/application-prd.properties
+++ b/weather-me-app/src/main/resources/application-prd.properties
@@ -3,10 +3,12 @@ server.port=9090
 springfox.swagger.enabled=false
 
 # Weather Me properties
-#weather.me.openweathermapsite-api-appid=<appid>
-weather.me.openweathermapsite-api-url=http://api.openweathermap.org/data/2.5
-weather.me.openweathermapsite-api-currentweather-suffix=/weather?
-weather.me.locations.load=true
+weather.me.locations.load=false
+#weather.me.api-appid=<appid>
+weather.me.api-url=http://api.openweathermap.org/data/2.5
+weather.me.api-suffix-for-weather=/weather?
+weather.me.api-call-validity-minute-for-weather=30
+weather.me.api-call-count-limit-per-minute-for-weather=60
 
 #INTERNATIONALIZATION
 spring.messages.basename=message/error_message
@@ -17,7 +19,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Datasource for MySQL database
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/weatherme?useSSL=false
-#spring.datasource.username=<usename>
+#spring.datasource.username=<username>
 #spring.datasource.password=<password>
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
