commit and push

--- a/weather-me-app/src/main/resources/message/error_message.properties
+++ b/weather-me-app/src/main/resources/message/error_message.properties
@@ -1,4 +1,18 @@
 DEFAULT_ERROR_MESSAGE=Özür dileriz, şu anda işleminizi gerçekleştiremiyoruz. Lütfen daha sonra tekrar deneyiniz.
+N00010-00010=Kayıt bulunamadı. default
+N00020-00020=Zorunlu alan eksik. default
+N00021-00021=Zorunlu alan hatalı. default
 N00040-00040=Kaydedilemedi. default
+N00041-00041=Güncellenemedi. default
+N00042-00042=Silinemedi. default
+N00043-00043=Kayıt zaten mevcut. default
+N00050-00050=Geçersiz servis. default
 N00400-00400=Hatalı istek. default
+N00401-00401=Yetki hatası. default
+N00403-00403=Engellenmiş. default
 N00404-00404=Bulunamadı. default
+N00500-00500=Dahili hata. default
+N99999-99999=Beklenmeyen hata. default
+# Add your error_messages below
+N00020-00100=locationId değeri verilmemiş. default
+N00010-00101=Dakikadaki API çağrım sayısı aşıldı. default
