--- a/weather-me-app/src/main/resources/application-local.properties
+++ b/weather-me-app/src/main/resources/application-local.properties
@@ -4,11 +4,11 @@ springfox.swagger.enabled=true
 
 # Weather Me properties
 weather.me.locations.load=false
-#weather.me.api-appid=<appid>
+#weather.me.api-appid=(appid)
 weather.me.api-url=http://api.openweathermap.org/data/2.5
 weather.me.api-suffix-for-weather=/weather?
 weather.me.api-call-validity-minute-for-weather=30
-weather.me.api-call-count-limit-per-minute-for-weather=60
+weather.me.api-call-count-limit-per-minute-for-weather=500
 
 #INTERNATIONALIZATION
 spring.messages.basename=message/error_message
@@ -19,8 +19,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Datasource for MySQL database
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/weatherme-local?useSSL=false
-#spring.datasource.username=<username>
-#spring.datasource.password=<password>
+#spring.datasource.username=(username)
+#spring.datasource.password=(password)
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
