--- a/weather-me-app/src/main/resources/application-prd.properties
+++ b/weather-me-app/src/main/resources/application-prd.properties
@@ -20,7 +20,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # Datasource for MySQL database
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/weatherme?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/weatherme?allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.username=(username)
 #spring.datasource.password=(password)
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
