--- a/weather-me-parent/pom.xml
+++ b/weather-me-parent/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.alperkurtul.weatherme</groupId>
         <artifactId>weather-me</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
 
     <artifactId>weather-me-parent</artifactId>
